--- a/Project.toml
+++ b/Project.toml
@@ -1,2 +1,5 @@
 [deps]
+CitableBase = "d6f014bd-995c-41bd-9893-703339864534"
+CitableCorpus = "cf5ac11a-93ef-4a1a-97a3-f6af101603b5"
+CitableText = "41e66566-473b-49d4-85b7-da83b66615d8"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
